# Desafio-ITAU-Quant-2025

./: .codecov.yml  .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  CORRECTIONS_LOG.md  Dockerfile  EXECUTAR.txt  LICENSE  Makefile  PRD.md  QUICKSTART.md  QUICKSTART_ROBUSTO.md  README.md  README_IMPROVEMENTS_SUMMARY.md  RESULTADOS_FINAIS.md  RUNBOOK_PRODUCAO.md  VALIDATION_CHECKLIST.md  VALIDATION_SUMMARY.md  erc_calibrated.py  main.py  production_logger.py  production_monitor.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_backtest_walkforward.py  run_baselines_comparison.py  run_grid_search_shrinkage.py  run_mu_skill_test.py  run_portfolio_arara.py  run_portfolio_arara_robust.py  run_portfolio_production_erc.py  run_portfolio_production_erc_v2.py  run_shrinkage_grid_search.py  test_portfolio_run.py
.codex/: config.yaml
.devcontainer/: Dockerfile  devcontainer.json  post_create.sh
configs/: README.md  asset_groups.yaml  backtest_full.yaml  backtest_with_cardinality.yaml  ga_meta_example.yaml  oos_period.yaml  optimizer_adaptive_hedge.yaml  optimizer_example.yaml  optimizer_example_tail.yaml  optimizer_example_trimmed.yaml  optimizer_regime_aware.yaml  optimizer_tuning_a.yaml  optimizer_tuning_b.yaml  portfolio_arara_robust.yaml  production_erc_v2.yaml  runtime_real_backtest.yaml  universe_arara.yaml  universe_arara_robust.yaml  universe_liquid.yaml
data/: README.md
docs/: AGENTS.md  BUG_TURNOVER_PRISM_R.md  CHANGELOG.md  COVERAGE.md  CVAR_CONVENTION.md  CVAR_STANDARDIZATION_SUMMARY.md  INDEX.md  LANGUAGE_POLICY.md  MONITORING_CHECKLIST.md  ORCHESTRATION_GUIDE.md  QUICKSTART.md  QUICKSTART_ROBUSTO.md  QUICK_START_COMMANDS.md  README.md  README_COMPLETION_SUMMARY.md  README_IMPROVEMENTS_SUMMARY.md  VALIDATION_CHECKLIST.md  VALIDATION_SUMMARY.md  technical_notes.md  user_guide.md
notebooks/: 01-data-exploration.ipynb  02-model-prototyping.ipynb  04-or-optimization-experiments.ipynb  README.md
reports/: backtest_20251101T135123Z.json  backtest_optimizer_example_trimmed_20251031T170224Z.json  backtest_optimizer_tuning_a_20251031T170128Z.json  backtest_optimizer_tuning_b_20251031T170158Z.json  backtest_summary.json  backtest_tail_20251101T144230Z.json  backtest_wf_20251101T164118Z.json  latest_run.json  latest_run.md  oos_consolidated_metrics.csv  oos_consolidated_metrics.json  optimize_20251101T135600Z.json  optimize_tail_20251101T144206Z.json  run_2025-10-28T19-58-04-541357.json  run_2025-10-28T19-58-04-541357.md  run_2025-10-29T11-07-43-394070.json  run_2025-10-29T11-07-43-394070.md  run_2025-10-29T11-19-38-897635.json  run_2025-10-29T11-19-38-897635.md  run_2025-10-29T11-20-17-323340.json  run_2025-10-29T11-20-17-323340.md  run_2025-10-29T11-20-43-969495.json  run_2025-10-29T11-20-43-969495.md  run_2025-10-29T11-23-39-693335.json  run_2025-10-29T11-23-39-693335.md  run_2025-10-29T11-24-39-363314.json  run_2025-10-29T11-24-39-363314.md  run_2025-10-29T11-25-01-582508.json  run_2025-10-29T11-25-01-582508.md  run_2025-10-29T11-25-33-128499.json  run_2025-10-29T11-25-33-128499.md  run_2025-10-29T11-26-32-197070.json  run_2025-10-29T11-26-32-197070.md  run_2025-10-29T11-30-24-184596.json  run_2025-10-29T11-30-24-184596.md  run_2025-10-29T11-31-00-958707.json  run_2025-10-29T11-31-00-958707.md  run_2025-10-29T12-01-08-268355.json  run_2025-10-29T12-01-08-268355.md  run_2025-10-31T22-32-59-318707.json  (+3 more)
results/: backtest_metrics_20251025_111313.csv  backtest_metrics_20251026_123315.csv  backtest_metrics_20251026_125847.csv  backtest_metrics_20251026_130035.csv  backtest_metrics_20251026_130126.csv  backtest_metrics_20251026_130157.csv  backtest_metrics_20251026_130313.csv  backtest_metrics_20251026_130415.csv  backtest_metrics_20251026_130441.csv  backtest_metrics_20251026_130457.csv  backtest_metrics_20251026_142352.csv  backtest_metrics_20251031_145518.csv  backtest_metrics_20251103_154152.csv  backtest_metrics_20251104_202231.csv  backtest_returns_20251025_111313.csv  backtest_returns_20251026_123315.csv  backtest_returns_20251026_125847.csv  backtest_returns_20251026_130035.csv  backtest_returns_20251026_130126.csv  backtest_returns_20251026_130157.csv  backtest_returns_20251026_130313.csv  backtest_returns_20251026_130415.csv  backtest_returns_20251026_130441.csv  backtest_returns_20251026_130457.csv  backtest_returns_20251026_142352.csv  backtest_returns_20251031_145518.csv  backtest_returns_20251103_154152.csv  backtest_returns_20251104_202231.csv  estimator_comparison_20251031_145457.csv  oos_cumulative_20251024_140611.csv  oos_cumulative_20251026_123332.csv  oos_metrics_comparison_20251024_140611.csv  oos_returns_all_strategies_20251024_140611.csv  oos_returns_all_strategies_20251026_123332.csv  portfolio_metrics_20251026_103747.csv  portfolio_metrics_20251026_115602.csv  portfolio_metrics_20251026_142340.csv  portfolio_metrics_robust_20251026_122823.csv  portfolio_weights_20251026_103747.csv  portfolio_weights_20251026_115602.csv  (+7 more)
scripts/: README.md  __init__.py  augment_oos_metrics.py  consolidate_oos_metrics.py  generate_final_metrics_report.py  generate_final_report.py  generate_oos_figures.py  run_01_data_pipeline.py  run_02_estimate_params.py  run_03_optimize.py  run_master_validation.py  update_readme_turnover_stats.py  validate_configs.py  validate_readme_metrics.py
(+580 files in other folders)
