[tool.poetry]
name = "itau_quant"
version = "0.1.0"
description = "Quantitative asset allocation strategy for the ITAU-Quant challenge."
authors = ["Marcus Vinícius Silva <marcusviny63@gmail.com>", "Anna Beatriz Cardoso <annacardoso9572@gmail.com>"]
readme = "README.md"
license = "MIT"
packages = [{include = "itau_quant", from = "src"}]

[tool.poetry.scripts]
itau-quant = "itau_quant.cli:main"

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
pandas = "^2.2.2"
numpy = "^2.1.0"
cvxpy = "^1.4.3"
scikit-learn = "^1.4.2"
osqp = "^0.6.5"
clarabel = "^0.8.0"
yfinance = "^0.2.41"
pandas-datareader = "^0.10.0"
matplotlib = "^3.8.4"
typing-extensions = "^4.11.0"
pyarrow = "^21.0.0"
pydantic = "^2.0"
pyyaml = "^6.0"
jinja2 = "^3.1.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-cov = "^5.0.0"
ruff = "^0.4.2"
black = "^24.4.2"
mypy = "^1.9.0"
pre-commit = "^3.7.0"
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "I", "UP", "PL", "T20"]
ignore = ["E501"]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = ["--import-mode=importlib"]
